--- a/css/style.css
+++ b/css/style.css
@@ -43,5 +43,20 @@ section>p{
 
 ul{
     margin-top: 20px;
+    margin-bottom: 20px;
     padding-left: 10px;
+}
+
+thead{
+    margin-top: 20px;
+    background-color: cornflowerblue;
+    color: white;
+}
+
+tbody{
+    background-color: rgb(132,208,240);;
+}
+
+#riga-bianca{
+    background-color: white;
 }
